[tool.poetry]
name = "copydbs"
version = "0.1.0"
description = ""
authors = ["Панфилов Константин Юрьевич (000169789 ) <konstantin.panfilov@dellin.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pyodbc = "^4.0.34"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
